--- a/market_blog/templates/cover.html
+++ b/market_blog/templates/cover.html
@@ -45,9 +45,9 @@
               <h3 class="masthead-brand">AnGroDeto</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li class="active"><a href="#">Akey</a></li>
+                  <li><a href="#">Katalog</a></li>
+                  <li><a href="#">Kontak</a></li>
                 </ul>
               </nav>
             </div>
