--- a/market_blog/templates/atik_blog.html
+++ b/market_blog/templates/atik_blog.html
@@ -12,6 +12,7 @@
         <p>{{ atik.deskripsyon }}</p>
         <p><i>{{ atik.pri }} HTG</i></p>
         <h5><i> {{ atik.specs }}</i></h5>
+        <h5><b><i> HMU at +{{ atik.kontak }} !!</i></b></h5>
     </div>
  </div>
  {% endfor %}
