--- a/market_blog/templates/cover.html
+++ b/market_blog/templates/cover.html
@@ -47,7 +47,7 @@
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="{% url 'index' %}">Akey</a></li>
                   <li><a href="{% url 'atik' %}">Katalog</a></li>
-                  <li><a href="#">AutoLink</a></li>
+                  <li><a href="{% url 'autolink' %}">AutoLink</a></li>
                   <li><a href="#">Kontak</a></li>
                 </ul>
               </nav>
